--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "gsap": "^3.13.0",
     "motion": "^12.23.11",
     "next": "^15.4.4",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
